--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,6 @@
     "jquery": "~2.1.4",
     "angular-route": "~1.4.2",
     "angular": "~1.4.2",
-    "angular-resource": "~1.4.2",
-    "angular-no-vnc": "*"
+    "angular-resource": "~1.4.2"
   }
 }
