--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 /bin/*
 /pkg/*
-/src/ddesktop/webroot/static/bower/*
+/src/ddesktop/webroot/bower/*
 /src/github.com/*
+/src/golang.org/*
 /src/gopkg.in/*
 .DS_Store
 .vagrant
