fix(chromium): removed chromium. it doesn't work in sanbox mode

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -8,22 +8,21 @@ RUN apt-get update -y
 RUN apt-get upgrade -y
 
 #Install software
-RUN apt-get install -y sudo net-tools lxde gtk2-engines-murrine \ 
-	ttf-ubuntu-font-family fonts-wqy-microhei lxterminal \ 
-	x11vnc Xvfb supervisor pwgen websockify curl less nano wget \ 
-	unzip firefox libreoffice retext evince gimp gimp-data \ 
-	gimp-plugin-registry gimp-data-extras filezilla chromium-browser \ 
-	cifs-utils
+RUN apt-get install -y sudo net-tools lxde gtk2-engines-murrine \
+	ttf-ubuntu-font-family fonts-wqy-microhei lxterminal \
+	x11vnc Xvfb supervisor pwgen websockify curl less nano wget \
+	unzip firefox libreoffice retext evince gimp gimp-data \
+	gimp-plugin-registry gimp-data-extras filezilla cifs-utils
 
 #Create ubuntu user
 RUN useradd --create-home --shell /bin/bash --user-group ubuntu
 
 #Edit startmenu and taskbar
-RUN cd /usr/share/applications && rm -f debian-uxterm.desktop \ 
-	debian-xterm.desktop gcr-prompter.desktop gcr-viewer.desktop \ 
-	gksu.desktop lxde-logout.desktop lxde-screenlock.desktop \ 
-	lxde-x-terminal-emulator.desktop openjdk-7-policytool.desktop \ 
-	python2.7.desktop python3.4.desktop x11vnc.desktop \ 
+RUN cd /usr/share/applications && rm -f debian-uxterm.desktop \
+	debian-xterm.desktop gcr-prompter.desktop gcr-viewer.desktop \
+	gksu.desktop lxde-logout.desktop lxde-screenlock.desktop \
+	lxde-x-terminal-emulator.desktop openjdk-7-policytool.desktop \
+	python2.7.desktop python3.4.desktop x11vnc.desktop \
 	xscreensaver-properties.desktop
 RUN rm -f /etc/xdg/menus/lxde-applications.menu /usr/share/lxpanel/profile/LXDE/panels/panel
 ADD files/menu /etc/xdg/menus
